# csvquery

./: CMakeLists.txt  Makefile  README.md  all_server.cc  analyzetree.cc  codegen.cc  datatyping.cc  embed_site.cc  embed_site.h  embed_site.hpp  filereader.cc  http.cc  http_server.cc  interpretor.h  lists.cc  main.cc  maps.cc  notes.txt  parser.cc  q1.test  q2.test  scanner.cc  scanner.h  server.cc  server.h  tag.sh  termos.cc  test.cc  test1  treetyping.cc  ui_server.cc  utils.cc  vmachine.cc  vmachine.h  vmutils.cc  ws.cc
newgui/: help.html  index.html  indextemplate.html  main.js  resultsample.html  singleresult.html  style.css  style.scss  watchcss
webgui/: .eslintcache  .gitignore  color.js  help.html  index.html  main.js  package-lock.json  package.json  singleresult.html  style.css  style.scss
webgui/src/: command.js  display.js  help.js  index.js  style.css  style.scss  testdata.json  topbar.js  utils.js
